feat: add header

--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <title>Vite + React + TS</title>
   </head>
   <body
-    class="m-0 flex place-items-center min-w-[20rem] min-h-screen bg-white dark:bg-[#242424] text-[#213547] dark:text-white/[.87]"
+    class="m-0 min-w-[20rem] min-h-screen bg-white dark:bg-[#242424] text-dark dark:text-white"
   >
-    <div id="root" class="max-w-7xl my-0 mx-auto text-center"></div>
+    <div id="root"></div>
     <script type="module" src="/src/index.tsx"></script>
   </body>
 </html>
