--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>GraphiQL</title>
   </head>
   <body
     class="m-0 min-w-[20rem] min-h-screen bg-white dark:bg-[#242424] text-dark dark:text-white"
